Updated haskell-these 1.2.1-23

--- a/extra/haskell-these/PKGBUILD
+++ b/extra/haskell-these/PKGBUILD
@@ -3,12 +3,12 @@
 _hkgname=these
 pkgname=haskell-these
 pkgver=1.2.1
-pkgrel=22
+pkgrel=23
 pkgdesc="An either-or-both data type"
 url="https://github.com/haskellari/these"
 license=('BSD')
 arch=('x86_64')
-depends=('ghc-libs' 'haskell-assoc' 'haskell-hashable')
+depends=('ghc-libs' 'haskell-assoc' 'haskell-foldable1-classes-compat' 'haskell-hashable')
 makedepends=('ghc' 'uusi')
 source=(https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz)
 sha512sums=('591f19347600b12b88e24a426f22707ec6b55b28ac451dc20fa1a7a9343c0278ac8130014a0224bde48ad26aa0b93f7ea745213174e7195d5afde251397641fa')
