--- a/extra/haskell-bin/PKGBUILD
+++ b/extra/haskell-bin/PKGBUILD
@@ -2,17 +2,17 @@
 
 _hkgname=bin
 pkgname=haskell-bin
-pkgver=0.1.3
-pkgrel=66
+pkgver=0.1.4
+pkgrel=1
 pkgdesc="Bin: binary natural numbers."
 url="https://github.com/phadej/vec"
-license=("GPL")
+license=('GPL-2.0-or-later')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-quickcheck' 'haskell-boring' 'haskell-dec' 'haskell-fin'
          'haskell-hashable' 'haskell-some')
 makedepends=('ghc' 'uusi')
 source=("https://hackage.haskell.org/packages/archive/$_hkgname/$pkgver/$_hkgname-$pkgver.tar.gz")
-sha512sums=('b301c320a3a87d1f3e176e90ffe6d12ab4f728d22a2f575c4e447df51c8e135e81073924d96d46ead244020f1ba7c578608fe23a8ffa1c5cebc4752c9aa69569')
+sha512sums=('3c9f4add88fb7dc73dca1348d66686466a90bf112f4e3c79d373d18d6aa28c826aaf90afc01949e4fe2d43cdb484958a14efd986f257972b8ab44fa002384ca7')
 
 prepare() {
   cd $_hkgname-$pkgver
