--- a/extra/haskell-edisonapi/PKGBUILD
+++ b/extra/haskell-edisonapi/PKGBUILD
@@ -3,16 +3,16 @@
 
 _hkgname=EdisonAPI
 pkgname=haskell-edisonapi
-pkgver=1.3.3.1
-pkgrel=2
+pkgver=1.3.3.2
+pkgrel=1
 pkgdesc="A library of efficient, purely-functional data structures (API)"
-url="http://rwd.rdockins.name/edison/home/"
+url="https://github.com/robdockins/edison"
 license=("MIT")
 arch=('x86_64')
 depends=('ghc-libs')
 makedepends=('ghc')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('17a891b17dea369c1ec3d9f9e7821bb45a1149d345bb091ac5265ff9ed3e2cef2b6afd46b01974791314b4eb026eb1ce2f5c237050b74558671e11aaada3b084')
+sha512sums=('60ded9d57e24fd741108ef767717e3931c168a1012fec5a9496d9744ae665bd140824302cc7c0c58fa41a86e60a65f71be0a7762f8b23b2b9a606a6b97533179')
 
 build() {
     cd $_hkgname-$pkgver
