--- a/extra/tuba/PKGBUILD
+++ b/extra/tuba/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Luna Jernberg <lunajernberg@gnome.org>
 
 pkgname=tuba
-pkgver=0.9.2
-pkgrel=3
+pkgver=0.10.0
+pkgrel=1
 pkgdesc='Browse the Fediverse'
 arch=(x86_64)
 url='https://apps.gnome.org/Tuba/'
@@ -26,12 +26,14 @@ depends=(
   libclapper
   libclapper-gtk
   libgee
+  libgexiv2
   libsecret
   libsoup3
   libspelling-1.so
   libxml2
   org.freedesktop.secrets
   pango
+  webkitgtk-6.0
   webp-pixbuf-loader
 )
 makedepends=(
@@ -41,7 +43,7 @@ makedepends=(
 )
 groups=(gnome-circle)
 source=("git+https://github.com/GeopJr/Tuba.git#tag=v$pkgver")
-b2sums=('12c0e16d7b56662e455d8b96e33afe9536086a2364521389ac770ae20785983d0bca130922b5d4c0188890911a7aa41baf5daeaa9b3eca336fce84c8787d7553')
+b2sums=('76f02ef9f8c4962a9357ba3fc7808ea3b22baa0c0b8d78fba7401c7ad454ed3d4083ef36dd36ac4816dcbc20e78d4dede63e4a5b7c1d8161156ce70a21989218')
 
 prepare() {
   cd Tuba
