--- a/extra/haskell-fold-debounce/PKGBUILD
+++ b/extra/haskell-fold-debounce/PKGBUILD
@@ -2,17 +2,17 @@
 
 _pkgname=fold-debounce
 pkgname=haskell-fold-debounce
-pkgver=0.2.0.11
-pkgrel=31
+pkgver=0.2.0.12
+pkgrel=1
 pkgdesc='Fold multiple events that happen in a given period of time'
 arch=(x86_64)
 url="https://hackage.haskell.org/package/$_pkgname"
-license=(BSD)
+license=(BSD-3-Clause)
 depends=(ghc-libs haskell-stm-delay haskell-data-default-class)
 checkdepends=(haskell-hspec haskell-hspec-discover)
 makedepends=(ghc)
 source=("https://hackage.haskell.org/packages/archive/$_pkgname/$pkgver/$_pkgname-$pkgver.tar.gz")
-sha512sums=('53989271496fc2bebd2cd9b8f2c8c548ac4b0ee66e880b6017b775854e81788e560dcc8f7dd9fb5ef696663ed0279e6ba9bd8342f7a26e5ff12787bb3df484ab')
+sha512sums=('e743104d025eaa9417ac5dd2401020f2307e6a3a3375ec3f3d173e40eb345c0825357e47628ca8917e4441d90cfb82c138b05a911df7bda1346f49a8adde885f')
 
 build() {
   cd $_pkgname-$pkgver
