--- a/extra/discord/REUSE.toml
+++ b/extra/discord/REUSE.toml
@@ -17,6 +17,8 @@ path = [
     "*.timer",
     "*.desktop",
     "*.hook",
+    ".gitignore",
+    "Permission_to_Distribute.mbox",
 ]
 SPDX-FileCopyrightText = "Arch Linux contributors"
 SPDX-License-Identifier = "0BSD"
