--- a/extra/vaultwarden-web/PKGBUILD
+++ b/extra/vaultwarden-web/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Markus Richter <mqus at disroot dot org>
 
 pkgname=vaultwarden-web
-pkgver=2025.7.0.0
+pkgver=2025.7.0.1
 pkgrel=1
 pkgdesc='Bitwarden web vault with the patches to make it work with Vaultwarden'
 arch=(any)
@@ -12,13 +12,13 @@ license=(GPL-3.0-only)
 depends=(vaultwarden)
 makedepends=(
   git
-  nodejs-lts-iron
+  nodejs-lts
   npm
 )
 install=$pkgname.install
 source=("$pkgname::git+$url#tag=v$pkgver")
-sha512sums=('487ae40e573131a34f9ebaadaf3545fb0fb725d1436884b9879f8a0dc6c22b9e5fe95b5879d3e9155f214613a9bc9586aa78ac5b4da09a58e301a83c93169843')
-b2sums=('b6d1376a50094a30bcab36c336e56a347229fdf425ad2110d2d5756dc585829a187ddba728f04a8ecf19354d95cb286a9ee0087774a0482769fd413fbf566bc5')
+sha512sums=('2812bc53d65bcdd6d885e773965d81b8e67a809a0b985f76da93c77bf6fa2fc83cb6d37e06fe0733467fb9ed0bfd44543fcebddab52eeb6c3321829887c7bfd2')
+b2sums=('911949b4ab06061200c2bf81af7280958cff514d64f370da243854979a0f4438fc5b57631cd90c4512aadc58a22fb8a196315c1f35321260643dcc673551f2fd')
 
 prepare() {
   cd "$pkgname"
