--- a/extra/quadrapassel/.nvchecker.toml
+++ b/extra/quadrapassel/.nvchecker.toml
@@ -1,4 +1,6 @@
 [quadrapassel]
 source = "git"
 git = "https://gitlab.gnome.org/GNOME/quadrapassel.git"
-prefix = "v"
+include_regex = '\d+(\.\d+)*'
+from_pattern = '\.([a-z])'
+to_pattern = '\1'
