--- a/extra/389-ds-base/PKGBUILD
+++ b/extra/389-ds-base/PKGBUILD
@@ -4,27 +4,26 @@
 # Contributor: Xiao-Long Chen <chenxiaolong@cxl.epac.to>
 
 pkgname=389-ds-base
-pkgver=3.1.2
+pkgver=3.1.3
 pkgdesc="389 Directory Server (base)"
 pkgrel=1
 arch=(x86_64)
 url="http://port389.org/"
-license=('GPL')
+license=('GPL-3.0-only')
 provides=('libsvrcore.so')
-replaces=('python-lib389')
 backup=(etc/dirsrv/config/certmap.conf
         etc/dirsrv/config/ldap-agent.conf
         etc/dirsrv/config/slapd-collations.conf
         etc/dirsrv/config/template-initconfig)
 depends=('cracklib' 'libevent' 'nspr' 'nss' 'net-snmp' 'pam' 'openldap' 'icu' 'db5.3' 'python-cryptography'
          'python-argcomplete' 'python-dateutil' 'python-ldap' 'python-packaging' 'lmdb')
-makedepends=('cargo' 'rsync' 'doxygen' 'cmocka' 'python-setuptools' 'python-argparse-manpage'
-             'npm' 'nodejs' 'systemd')
+makedepends=('cargo' 'rsync' 'doxygen' 'cmocka' 'python-build' 'python-argparse-manpage'
+             'npm' 'nodejs' 'systemd' 'python-pip' 'python-installer')
 optdepends=('cockpit: LDAP administration through the Cockpit web UI')
 source=(https://github.com/389ds/389-ds-base/archive/389-ds-base-${pkgver}.tar.gz
         389-ds-base.sysusers
         389-ds-base.tmpfiles)
-sha512sums=('8ec4c689ebe467ff71f34033169ace5ef9060cde1dc1f8fa6a177af2829773f3a5fd5a7140e9ef07ef052d5ad3bbf5e04eb62f4842ed40f3593dbfd93a821cf1'
+sha512sums=('c0692583642ee894224fcdb949fe3900f564115eb334353e63f7970e65910d687ec8a343bada1e559ad98e1f26279a7734db82bdac106d8d8500399e148ad21e'
             '7947f50e0fc26f07b388a20f53360cc5e1faf6dfa26dd6a48ffa833c4d247ade3f4269479b5ed4dbb99a2a1367b0ace4054da3d58e3bc3563c7daf947da72a72'
             '69ed8b8f3bdbf9098088b0c92c41a238f16d14ba9f86ebc2b5debe5f001b4d8e235f7cff4731d72b30b5ac70486b0f4300b99646aa3926a3fa59515a64f16402')
 
@@ -58,12 +57,10 @@ build() {
   make
 
   # Build lib389
-  make src/lib389/setup.py
-  cd src/lib389
-  python setup.py build
+  make lib389
 
   # Build cockpit plugin
-  cd ../cockpit/389-console
+  cd src/cockpit/389-console
   npm install
   npm run build
   mv dist cockpit_dist
@@ -72,22 +69,19 @@ build() {
 check() {
   cd "${pkgname}-${pkgname}-${pkgver}"
   # Currently broken: https://github.com/389ds/389-ds-base/issues/6598
-  # make check
+  make check
 }
 
 package() {
   cd "${pkgname}-${pkgname}-${pkgver}"
   # make DESTDIR="${pkgdir}/" install
-  make -j1 DESTDIR="${pkgdir}/" install
+  DESTDIR="${pkgdir}" make -j1 install
 
   install -Dm644 LICENSE "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 
   # Upstream expects lib389 and 389-ds-base to be shipped in the same package more or less
   # so that's why it's not a split package.
-  cd src/lib389
-  python setup.py install --skip-build -O1 --root="${pkgdir}"
-  mv "${pkgdir}"/usr/sbin/* "${pkgdir}"/usr/bin/
-  rmdir "${pkgdir}"/usr/sbin
+  python -m installer --destdir="$pkgdir" src/lib389/dist/*.whl
 
   mv "${pkgdir}"/usr/libexec/dirsrv/dscontainer "${pkgdir}"/usr/lib/dirsrv
   rm -r "${pkgdir}"/usr/libexec
