Updated python-kubernetes-validate 1.33.1-1

--- a/extra/python-kubernetes-validate/.nvchecker.toml
+++ b/extra/python-kubernetes-validate/.nvchecker.toml
@@ -2,4 +2,4 @@
 source = "git"
 git = "https://github.com/willthames/kubernetes-validate"
 prefix = "v"
-exclude_regex = ".*(pre|rc|alpha|beta).*"
+exclude_regex = ".*(pre|rc|a|alpha|beta).*"
