--- a/extra/haskell-split/PKGBUILD
+++ b/extra/haskell-split/PKGBUILD
@@ -4,21 +4,28 @@
 _hkgname=split
 pkgname=haskell-split
 pkgver=0.2.5
-pkgrel=40
+pkgrel=42
 pkgdesc="Combinator library for splitting lists."
 url="https://hackage.haskell.org/package/${_hkgname}"
 license=("BSD")
 arch=('x86_64')
 depends=('ghc-libs')
-makedepends=('ghc' 'haskell-quickcheck')
+makedepends=('ghc')
+checkdepends=('haskell-quickcheck')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
 sha512sums=('3904b4ad27766f136377bbf4be223e0f701b01dfceadb008be8e05fc3617f6795515b931bff2ca94321a02bb46cefb931696d66cb3628cd7fececf13ed9caeb0')
 
 build() {
     cd $_hkgname-$pkgver
-    
+
+    if (( CHECKFUNC )); then
+        _opts=('--enable-tests')
+    else
+        _opts=('--disable-tests')
+    fi
+
     runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
-        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
+        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname "${_opts[@]}" \
         --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid
     runhaskell Setup build $MAKEFLAGS
     runhaskell Setup register --gen-script
