--- a/extra/haskell-quickcheck-instances/PKGBUILD
+++ b/extra/haskell-quickcheck-instances/PKGBUILD
@@ -4,7 +4,7 @@
 _hkgname=quickcheck-instances
 pkgname=haskell-quickcheck-instances
 pkgver=0.3.30
-pkgrel=203
+pkgrel=206
 pkgdesc="Common quickcheck instances"
 url="https://github.com/haskellari/qc-instances"
 license=("BSD")
@@ -15,9 +15,14 @@ depends=('ghc-libs' 'haskell-onetuple' 'haskell-quickcheck' 'haskell-case-insens
          'haskell-tagged' 'haskell-text-short' 'haskell-these' 'haskell-time-compat'
          'haskell-transformers-compat' 'haskell-unordered-containers' 'haskell-uuid-types'
          'haskell-vector')
-makedepends=('ghc')
+makedepends=('ghc' 'uusi')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
 sha512sums=('090dba82984c45bf6e5c83ce460a77fe2af35443fa76ecaa50f63350c2b0a74f3945d53d67656530b322f95510b383a16eeeb5dd60177353e6c62ec50e7ced26')
+
+prepare() {
+    cd $_hkgname-$pkgver
+    uusi -u primitive
+}
 
 build() {
     cd $_hkgname-$pkgver
