--- a/extra/haskell-hedgehog/PKGBUILD
+++ b/extra/haskell-hedgehog/PKGBUILD
@@ -4,7 +4,7 @@
 _hkgname=hedgehog
 pkgname=haskell-hedgehog
 pkgver=1.4
-pkgrel=7
+pkgrel=10
 pkgdesc="A modern property-based testing system"
 url="https://hedgehog.qa"
 license=('BSD-3-Clause')
@@ -21,6 +21,7 @@ sha512sums=('2c91d0bab1f06996ea68e2823d7e2105da616329ba3bb967b230fe018e113ee40a4
 prepare() {
     cd $_hkgname-$pkgver
     gen-setup
+    uusi -u primitive
 } 
 
 build() {
