--- a/extra/haskell-tasty-th/PKGBUILD
+++ b/extra/haskell-tasty-th/PKGBUILD
@@ -4,21 +4,28 @@
 _hkgname=tasty-th
 pkgname=haskell-tasty-th
 pkgver=0.1.7
-pkgrel=362
+pkgrel=366
 pkgdesc="Automatic tasty test case discovery using TH"
 url="https://github.com/bennofs/tasty-th"
 license=("BSD")
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-src-exts' 'haskell-tasty')
-makedepends=('ghc' 'haskell-tasty-hunit')
+makedepends=('ghc')
+checkdepends=('haskell-tasty-hunit')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
 sha512sums=('7302220ab27aaed22e064518e915610fd5dc7033a931f862fbc63e8a0b1cadcf9306ab3d54d48a10a200c8c8a62b9259462f513a6350df5a02836c6a29f51aef')
 
 build() {
     cd $_hkgname-$pkgver
 
+    if (( CHECKFUNC )); then
+        _opts=('--enable-tests')
+    else
+        _opts=('--disable-tests')
+    fi
+
     runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
-        --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
+       --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname "${_opts[@]}" \
         --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid
     runhaskell Setup build $MAKEFLAGS
     runhaskell Setup register --gen-script
