--- a/extra/qtile/PKGBUILD
+++ b/extra/qtile/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: David Runge <dvzrv@archlinux.org>
 
 pkgname=qtile
-pkgver=0.32.0
+pkgver=0.33.0
 pkgrel=1
 pkgdesc="A full-featured, pure-Python tiling window manager"
 arch=(x86_64)
@@ -36,6 +36,7 @@ checkdepends=(
   imagemagick
   lm_sensors
   procps-ng
+  python-anyio
   python-bowler
   python-dbus-fast
   python-gobject
@@ -75,8 +76,8 @@ optdepends=(
 )
 install=$pkgname.install
 source=("git+$_url?signed#tag=v$pkgver")
-sha512sums=('fdbd2a14b54bfa8bfef3a1382ea4523afc0d8a911feddac7ba205a211ef2655963ebe0f6e7a34ae1f5bcd26b86cb66dc66eb403481a64926f6343d1734a7b076')
-b2sums=('6d18e55c07a81076bfb234815254a0e1610ec79285c8a3ff2c19a7ec7a3fd2698d0067deb07b53bef60977ddef63437f0bc6cbea7a3dedc991b46ec2450a3460')
+sha512sums=('27c84c093a272b489baf9cf7227dfcbbf179bddd46002ea4dd4b5d3d79d902e08974f7e277a518b81e8a9c4a9ba566b986dc61c61984144573c3a37162ec4aa0')
+b2sums=('f24baa1e7897c34d4eb767d19dbddd697aea0a9a69ffd70a6e2a91ed1c825ec89aa721b182e92eb77de1cf5026eeb512acbc9e9b66ab99490a98e17a20aa8403')
 validpgpkeys=(
   '3CCAB226289DE0160C61BDB418D18F1BC464DCA3' # Tycho Andersen <tycho@tycho.pizza>
   '35D92E7CC7357A81173EA1C974F9FDD20984FBEC' # Matt Colligan <mcol@posteo.net>
@@ -106,9 +107,6 @@ check() {
     -vv
     --backend x11
     --backend wayland
-    # disable failing tests: https://github.com/qtile/qtile/issues/5283
-    --deselect 'test/widgets/test_vertical_clock.py::test_vclock_default[1-x11]'
-    --deselect 'test/widgets/test_vertical_clock.py::test_vclock_extra_lines[1-x11-vclock_manager0]'
   )
   local _site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
 
