--- a/extra/haskell-pipes-safe/PKGBUILD
+++ b/extra/haskell-pipes-safe/PKGBUILD
@@ -3,15 +3,20 @@
 _hkgname=pipes-safe
 pkgname=haskell-pipes-safe
 pkgver=2.3.5
-pkgrel=5
+pkgrel=6
 pkgdesc="Safety for the pipes ecosystem"
 url="https://github.com/Gabriella439/Haskell-Pipes-Safe-Library"
 license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-monad-control' 'haskell-pipes' 'haskell-primitive' 'haskell-transformers-base')
-makedepends=('ghc')
+makedepends=('ghc' 'uusi')
 source=("https://hackage.haskell.org/packages/archive/$_hkgname/$pkgver/$_hkgname-$pkgver.tar.gz")
 sha256sums=('f0b2d191a8a86edd5efeadd2a3af785a0b889222720f27b2fbe69d54fc53d78e')
+
+prepare() {
+  cd $_hkgname-$pkgver
+  uusi -u primitive
+}
 
 build() {
   cd $_hkgname-$pkgver
